# zk-snark-matrix

./: .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .typos.toml  Cargo.toml  MSC0000-zk-proven-room-joins.md  Makefile  README.md  RumaLean.lean  demo_algorithm_showdown.sh  main.rs
.cargo/: cargo-wrapper.sh
.git-crypt/keys/default/0/: ABA2CF53737BFA94A2E7252BA5E84308D78C7A80.gpg  B01134DDA2FCF3834399F664BA1414B434F233C6.gpg  C5235971BD1493F85AFA66E3CC4EBE9F2784B4AD.gpg  C6662F132E169C4802627B1ECDBCCB44A608363E.gpg
.github/: dependabot.yml
.github/workflows/: ci.yml
RumaLean/: DirectedAcyclicGraph.lean  Kahn.lean  StateRes.lean
ctopology/: Cargo.toml
ctopology/src/: lib.rs
demo/: README.md  index.html
demo-unoptimized-guest/: Cargo.toml
demo-unoptimized-guest/src/: lib.rs
demo_unoptimized_guest/: Cargo.toml
demo_unoptimized_guest/src/: lib.rs
docs/: architectural-paths.md  implementation-roadmap.md  security-model.md  topological-reducer-speedup.md
fixtures/: fed_nutra_dev.json  fed_nutra_nightly.json  fed_nutra_nightly_wrapped.json  fed_state_sample.json
host/src/: main.rs
paper/: paper.tex
pure-topological-prover/: .gitignore  Cargo.toml
pure-topological-prover/src/: main.rs
ruma-zk/: Cargo.toml
ruma-zk-prover/: Cargo.toml  README.md
ruma-zk-prover/src/: auth.rs  expander.rs  field.rs  keccak_circuit.rs  lib.rs  main.rs  merkle.rs  pdu.rs  recursive.rs  stark.rs  trace.rs  transcript.rs  transport.rs  waksman.rs
ruma-zk-prover/tests/: cli.rs  end_to_end.rs
ruma-zk-topair/: Cargo.toml
ruma-zk-topair/src/: lib.rs  main.rs
ruma-zk-topological-air/: Cargo.toml  README.md  lake-manifest.json  lakefile.lean
ruma-zk-topological-air/lean_src/: ctopology.lean
ruma-zk-topological-air/lean_src/ctopology/: Arithmetization.lean  Commitment.lean  Conjectures.lean  RoutingGate.lean  StarGraphEmbedding.lean
ruma-zk-topological-air/src/: field.rs  gadgets.rs  lib.rs  matrix.rs
ruma-zk-verifier/: Cargo.toml  README.md
ruma-zk-verifier/src/: lib.rs
ruma-zk-verifier/tests/: web.rs
ruma-zk-wasm/: Cargo.toml
ruma-zk/guest/: Cargo.toml
ruma-zk/src/: fixtures.rs  main.rs
ruma_zk_guest/: Cargo.toml
ruma_zk_guest/src/: lib.rs
ruma_zk_witness/: Cargo.toml
scripts/: batch_get_pdus.py  crossover_chart.py  detect_vuln_002.py  extract_fed_pdus.py  fetch_federation_state.py  fetch_matrix_state.py  generate_massive_data.py  visualize_benchmarks.wls
src/: lib.rs  main.rs
src/circuit/: recursive.rs  state_res.rs
src/guest/: Cargo.toml  main.rs
src/guest-unoptimized/: Cargo.toml
src/guest/src/: lib.rs
src/host/: Cargo.toml  fixtures.rs  main.rs
src/topological-prover/: Cargo.toml
src/topological-prover/src/: main.rs
src/wasm-client/: Cargo.toml
src/wasm-client/src/: lib.rs
