[workspace]
resolver = "2"
members = ["ruma-zk", "ruma-zk-topair", "ruma-zk-verifier"]

[workspace.package]
version = "0.1.1"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-zk"
description = "Matrix State Resolution framework with ZK-SNARK proof generation and verification."

[workspace.dependencies]
bincode = "1.3"
p3-baby-bear = "0.5.2"
p3-field = "0.5.2"
ruma-lean = { path = "ruma-lean", version = "0.1.1" }
ruma-zk-topair = { path = "ruma-zk-topair", version = "0.1.1" }
ruma-zk-verifier = { path = "ruma-zk-verifier", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
