[package]
name = "ruma-zk-prover"
version.workspace = true
authors.workspace = true
edition = "2021"
description.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
ruma-zk-topological-air = { workspace = true }
serde.workspace = true
serde_json.workspace = true
