[package]
name = "ruma-zk"
version.workspace = true
authors.workspace = true
edition = "2021"
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { version = "=0.21.7", default-features = false }
bincode.workspace = true
ciborium = "0.2.2"
clap = { version = "4.4", features = ["derive"] }
ed25519-consensus = "2.1"
hashbrown = { version = "=0.14.5", default-features = false, features = ["ahash", "inline-more", "serde"] }
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
rayon = "1.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ruma-lean = { workspace = true, features = ["cli"] }
ruma-zk-topair = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
