[package]
name = "ruma-zk"
version = "0.1.0"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "High-level API for generating and verifying Matrix State Resolution proofs using Jolt zkVM."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-zk"

[[bin]]
name = "ruma-zk"
path = "src/main.rs"

[dependencies]
jolt-sdk = { version = "0.1.0", git = "https://github.com/a16z/jolt.git", features = ["host"] }
clap = { version = "4.4", features = ["derive"] }
ruma-zk-guest = { version = "0.1.0", path = "./guest" }
ruma-zk-guest-unoptimized = { version = "0.1.0", path = "../demo-unoptimized-guest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4"
ciborium = "0.2.2"
bincode = "1.3"
ruma-lean = { version = "0.1.0", git = "https://github.com/gamesguru/ruma-lean.git" }
rayon = "1.12"
ed25519-consensus = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
