[package]
name = "ruma-zk-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
ruma-lean = { version = "0.1.0", git = "https://github.com/gamesguru/ruma-lean.git", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
ciborium = { version = "0.2.2", default-features = false }
jolt = { package = "jolt-sdk", version = "0.1.0", git = "https://github.com/a16z/jolt.git", default-features = false, features = ["guest-std"] }

[features]
guest = []
host = ["jolt/host"]
