[package]
name = "zk-matrix-join-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-matrix-join-host"
path = "main.rs"

[dependencies]
sp1-sdk = { version = "6.0.2", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"

[build-dependencies]
sp1-build = "6.0.2"
