[package]
name = "pure-topological-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = "0.3.2-succinct"
p3-matrix = "0.3.2-succinct"
p3-field = "0.3.2-succinct"
p3-baby-bear = "0.3.2-succinct"
p3-uni-stark = "0.3.2-succinct"
p3-challenger = "0.3.2-succinct"
p3-commit = "0.3.2-succinct"
p3-fri = "0.3.2-succinct"
p3-dft = "0.3.2-succinct"
p3-keccak = "0.3.2-succinct"
p3-merkle-tree = "0.3.2-succinct"
p3-symmetric = "0.3.2-succinct"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
